--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>Welcome to {{title}}</h1>  <!-- data binding -->
-<p>This is my first angular project</p>
-<p>{{message}}</p>
+<div>
+    <app-container></app-container>
+</div>
